# auto-email-report

./: LICENSE  README.md  config.env  pyproject.toml  run.py
data/: templates.html
src/: __init__.py
src/service/: email.py
src/tasks/: data.py
src/utils/: date.py  logger.py
